tests/snapshots/yaml_suite_snapshots__yaml_suite_9HCY_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Need document footer before directives
  from: "@ingydotnet"
  tags: directive error footer tag unknown-tag
  fail: true
  yaml: "!foo \"bar\"\n%TAG ! tag:example.com,2000:app/\n---\n!foo \"bar\"\n"
  tree: "+STR\n +DOC\n  =VAL <!foo> \"bar\n"
