tests/snapshots/yaml_suite_snapshots__yaml_suite_9HCY_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@ingydotnet"
  name: Need document footer before directives
  tags: directive error footer tag unknown-tag
  tree: "+STR\n +DOC\n  =VAL <!foo> \"bar\n"
  yaml: "!foo \"bar\"\n%TAG ! tag:example.com,2000:app/\n---\n!foo \"bar\"\n"
