tests/snapshots/yaml_suite_snapshots__yaml_suite_9J7A_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Simple Mapping Indent
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/indent.tml"
  tags: simple mapping indent
  yaml: "foo:\n  bar: baz\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   +MAP\n    =VAL :bar\n    =VAL :baz\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": {\n    \"bar\": \"baz\"\n  }\n}\n"
