tests/snapshots/yaml_suite_snapshots__yaml_suite_9J7A_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/indent.tml"
  json: "{\n  \"foo\": {\n    \"bar\": \"baz\"\n  }\n}\n"
  name: Simple Mapping Indent
  tags: simple mapping indent
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   +MAP\n    =VAL :bar\n    =VAL :baz\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo:\n  bar: baz\n"
