tests/snapshots/yaml_suite_snapshots__yaml_suite_9JBA_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid comment after end of flow sequence
  from: "@perlpunk"
  tags: comment error flow sequence
  fail: true
  yaml: "---\n[ a, b, c, ]#invalid\n"
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :a\n   =VAL :b\n   =VAL :c\n  -SEQ\n"
