tests/snapshots/yaml_suite_snapshots__yaml_suite_9JBA_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid comment after end of flow sequence
  tags: comment error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :a\n   =VAL :b\n   =VAL :c\n  -SEQ\n"
  yaml: "---\n[ a, b, c, ]#invalid\n"
