tests/snapshots/yaml_suite_snapshots__yaml_suite_9KAX_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Various combinations of tags and anchors
  from: "@perlpunk"
  tags: anchor mapping 1.3-err tag
  yaml: "---\n&a1\n!!str\nscalar1\n---\n!!str\n&a2\nscalar2\n---\n&a3\n!!str scalar3\n---\n&a4 !!map\n&a5 !!str key5: va…"
  tree: "+STR\n +DOC ---\n  =VAL &a1 <tag:yaml.org,2002:str> :scalar1\n -DOC\n +DOC ---\n  =VAL &a2 <tag:yaml.or…"
  json: "\"scalar1\"\n\"scalar2\"\n\"scalar3\"\n{\n  \"key5\": \"value4\"\n}\n{\n  \"a6\": 1,\n  \"b6\": 2\n}\n{\n  \"key8\": \"value7…"
  dump: "--- &a1 !!str scalar1\n--- &a2 !!str scalar2\n--- &a3 !!str scalar3\n--- &a4 !!map\n&a5 !!str key5: v…"
