tests/snapshots/yaml_suite_snapshots__yaml_suite_9KAX_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- &a1 !!str scalar1\n--- &a2 !!str scalar2\n--- &a3 !!str scalar3\n--- &a4 !!map\n&a5 !!str key5: value4\n---\na6: 1\n&anchor6 b6: 2\n--- !!map\n&a8 !!str key8: value7\n--- !!map\n&a10 !!str key10: value9\n--- &a11 !!str value11\n"
  from: "@perlpunk"
  json: "\"scalar1\"\n\"scalar2\"\n\"scalar3\"\n{\n  \"key5\": \"value4\"\n}\n{\n  \"a6\": 1,\n  \"b6\": 2\n}\n{\n  \"key8\": \"value7\"\n}\n{\n  \"key10\": \"value9\"\n}\n\"value11\"\n"
  name: Various combinations of tags and anchors
  tags: anchor mapping 1.3-err tag
  tree: "+STR\n +DOC ---\n  =VAL &a1 <tag:yaml.org,2002:str> :scalar1\n -DOC\n +DOC ---\n  =VAL &a2 <tag:yaml.org,2002:str> :scalar2\n -DOC\n +DOC ---\n  =VAL &a3 <tag:yaml.org,2002:str> :scalar3\n -DOC\n +DOC ---\n  +MAP &a4 <tag:yaml.org,2002:map>\n   =VAL &a5 <tag:yaml.org,2002:str> :key5\n   =VAL :value4\n  -MAP\n -DOC\n +DOC ---\n  +MAP\n   =VAL :a6\n   =VAL :1\n   =VAL &anchor6 :b6\n   =VAL :2\n  -MAP\n -DOC\n +DOC ---\n  +MAP <tag:yaml.org,2002:map>\n   =VAL &a8 <tag:yaml.org,2002:str> :key8\n   =VAL :value7\n  -MAP\n -DOC\n +DOC ---\n  +MAP <tag:yaml.org,2002:map>\n   =VAL &a10 <tag:yaml.org,2002:str> :key10\n   =VAL :value9\n  -MAP\n -DOC\n +DOC ---\n  =VAL &a11 <tag:yaml.org,2002:str> :value11\n -DOC\n-STR\n"
  yaml: "---\n&a1\n!!str\nscalar1\n---\n!!str\n&a2\nscalar2\n---\n&a3\n!!str scalar3\n---\n&a4 !!map\n&a5 !!str key5: value4\n---\na6: 1\n&anchor6 b6: 2\n---\n!!map\n&a8 !!str key8: value7\n---\n!!map\n!!str &a10 key10: value9\n---\n!!str &a11\nvalue11\n"
